# shaderc

./: CMakeLists.txt
glslc/: CMakeLists.txt
libshaderc_util/: CMakeLists.txt
libshaderc_util/src/: compiler.cc
